--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Qin Lei / Homepage"
+title                    : "Lei QIN / Homepage"
 title_separator          : "-"
-name                     : &name "Qin Lei"
-description              : &description "Qin Lei's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+name                     : &name "Lei QIN"
+description              : &description "Lei QIN's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : "https://leonis824.github.io" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "/QinLei.github.io" # the subpath of your site, e.g. "/blog"
@@ -24,7 +24,7 @@ repository               : "Leonis824/QinLei.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Qin Lei"
+  name             : "Lei QIN"
   pronouns         : # example: "he/his"  
   bio              : #"Short biography for the left-hand sidebar"
   location         : "Hong Kong SAR"
